chore(README.md): clean up whitespace and add execution instructions feat(README.md): add TODO list for future tasks and improvements
feat(casc.yaml): update Jenkins configuration
- Add URL and locale settings
- Enable remoting security
- Update security realm to use environment variables for admin ID and password
- Comment out authorization strategy for now
- Add script approval for a specific script

feat(docker-compose.yml): add environment variables for Jenkins admin ID and password

feat(jenkins_master.Dockerfile): update base image to specific version
- Install lsb-release package
- Add Docker repository and install docker-ce-cli package
- Update Jenkins user to root temporarily for package installation
- Update Jenkins user back to jenkins for subsequent commands
- Update Jenkins plugins installation command

feat(plugins.txt): add job-dsl and locale plugins

feat: add plugins_no_upload.txt, projects.json, and seed.jenkinsfile

Add plugins_no_upload.txt file with a list of Jenkins plugins and their versions.
Add projects.json file with an example project configuration.
Add seed.jenkinsfile with a pipeline script to create a job based on the projects.json configuration.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
       dockerfile: jenkins_master.Dockerfile
     environment:
       - JAVA_OPTS=-Dhudson.footerURL=http://felix-orduz.click -Djenkins.install.runSetupWizard=false
+      - JENKINS_ADMIN_ID=admin
+      - JENKINS_ADMIN_PASSWORD=admin
     ports:
       - "8080:8080"
       - "50000:50000"
@@ -13,5 +15,15 @@ services:
     restart: on-failure
   ssh-agent:
     image: jenkins/ssh-agent
+  # jenkins_slave:
+  #   image: jenkins/jnlp-slave
+  #   container_name: jnlp_slave
+  #   user: root
+  #   command: -url http:/jenkins:8080 <secret> <jenkins_slave>
+  #   restart: always
+  #   volumes:
+  #     - /var/run/docker.sock:/var/run/docker.sock
+  #     - /usr/bin/docker:/usr/bin/docker
+  #     - $HOME/jnlp_slave:/var/jenkins_home
 volumes:
   jenkins_home:
