chore(casc.yaml): update scriptPath in Jenkins job configuration to 'JDSL/seed.jenkinsfile' feat(plugins.txt): add pipeline-utility-steps plugin version 2.16.0 refactor(projects.json): remove projects.json file as it is no longer needed refactor(seed.jenkinsfile): remove seed.jenkinsfile as it is no longer needed

--- a/casc.yaml
+++ b/casc.yaml
@@ -81,8 +81,7 @@ jobs:
                 }
                 branch 'main'
               }
-
-              scriptPath 'seed.jenkinsfile'
+              scriptPath 'JDSL/seed.jenkinsfile'
             }
           }
         }
