fix(jdsl.groovy): Comment out unused variables and folder/job creation code for example1 feat(jdsl.groovy): Add support for multibranch pipeline job creation based on configuration file fix(projects.json): Update key names in the JSON file to match the code feat(projects.json): Add support for multiple applications within a system in the JSON file fix(seed.jenkinsfile): Comment out unused jobDsl target and update jobDsl target path feat(test.groovy): Add support for creating multibranch pipeline jobs based on configuration

--- a/JDSL/projects.json
+++ b/JDSL/projects.json
@@ -1,10 +1,16 @@
 {
-    "projects":[
+    "systems":[
         {
-            "name":"example",
-            "description":"Example",
-            "scmUrl":"https://github.com/gabrielf/maven-samples.git",
-            "type":"maven"
+            "name":"Nombre Sistema",
+            "description":"Desc Sistema",
+            "Aplications":[
+                {
+                    "name":"Nombre Sistema",
+                    "description":"desc system",
+                    "scm":"github",
+                    "scmURL": "https://github.com/jitpack/maven-simple"
+                }
+            ]
         }
     ]
 }
