feat(jdsl.groovy): add parameters to createFolder function to improve reusability and flexibility fix(jdsl.groovy): fix typo in "applications" key in projects.json to match the correct spelling feat(jdsl.groovy): add multibranchPipelineJob for each application in the system to create Jenkins jobs

--- a/JDSL/projects.json
+++ b/JDSL/projects.json
@@ -3,7 +3,7 @@
         {
             "name":"Nombre Sistema",
             "description":"Desc Sistema",
-            "Aplications":[
+            "aplications":[
                 {
                     "name":"Nombre Sistema",
                     "description":"desc system",
