fix(jdsl.groovy): change hardcoded values for pipelineName and application['scmURL'] to improve flexibility and reusability feat(jdsl.groovy): add support for dynamic values for pipelineName and application['scmURL'] to create jobs based on different pipelines and repositories feat(projects.json): update system and application details for FEOG system and nodejs application

--- a/JDSL/projects.json
+++ b/JDSL/projects.json
@@ -1,14 +1,15 @@
 {
     "systems":[
         {
-            "name":"Nombre Sistema",
-            "description":"Desc Sistema",
+            "name":"FEOG",
+            "description":"Projects of FEOG",
             "aplications":[
                 {
-                    "name":"Nombre Sistema",
-                    "description":"desc system",
+                    "name":"nodejs",
+                    "description":"It's a simple NodeJS application",
                     "scm":"github",
-                    "scmURL": "https://github.com/jitpack/maven-simple"
+                    "scmURL": "https://github.com/felix-orduz/nodejs.git",
+                    "repoOwner":"felix-orduz"
                 }
             ]
         }
