fix(jdsl.groovy): uncomment repositoryUrl line to use a constant and unique identifier for the pipeline fix(jdsl.groovy): change repository value to use owner/repository format for better clarity fix(projects.json): fix typo in "applications" key feat(projects.json): add new system "FEOG" with a nodejs application, including its name, repository, description, scm, scmURL, and repoOwner

--- a/JDSL/projects.json
+++ b/JDSL/projects.json
@@ -1,17 +1,18 @@
 {
-    "systems":[
+  "systems": [
+    {
+      "name": "FEOG",
+      "description": "Projects of FEOG",
+      "aplications": [
         {
-            "name":"FEOG",
-            "description":"Projects of FEOG",
-            "aplications":[
-                {
-                    "name":"nodejs",
-                    "description":"It's a simple NodeJS application",
-                    "scm":"github",
-                    "scmURL": "https://github.com/felix-orduz/nodejs.git",
-                    "repoOwner":"felix-orduz"
-                }
-            ]
+          "name": "nodejs",
+          "respository": "nodejs",
+          "description": "It's a simple NodeJS application",
+          "scm": "github",
+          "scmURL": "https://github.com/felix-orduz/nodejs.git",
+          "repoOwner": "felix-orduz"
         }
-    ]
+      ]
+    }
+  ]
 }
