feat(JCASC): add Jenkins Configuration as Code (JCASC) files and Docker configuration
- Add `casc.yaml` file to configure Jenkins settings such as the Jenkins URL, system message, security realm, and script approvals.
- Add `initialConfig.groovy` file to set the number of executors and mark the initial setup as completed.
- Add `plugins.txt` file to specify the required Jenkins plugins.
- Add `seed.jenkinsfile` to define a pipeline job for the Seed Job.
- Add `docker-compose.yml` file to configure the Jenkins and SSH agent services in Docker.
- Add `jenkins_master.Dockerfile` to build the Jenkins master Docker image, install Docker CLI, and copy the JCASC files.

These changes are made to automate the Jenkins setup and configuration process using JCASC and Docker, providing a reproducible and scalable environment for Jenkins.

chore(plugins_no_upload.txt): remove unused plugins from the project

The plugins_no_upload.txt file was deleted as it contained a list of unused plugins that were no longer needed in the project. This commit removes the file and cleans up the project by removing the unnecessary plugins.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
   jenkins:
     build:
-      context: ./
-      dockerfile: jenkins_master.Dockerfile
+      context: ../
+      dockerfile: docker/jenkins_master.Dockerfile
     environment:
       - JAVA_OPTS=-Dhudson.footerURL=http://felix-orduz.click -Djenkins.install.runSetupWizard=false
       - JENKINS_ADMIN_ID=admin
@@ -15,15 +15,5 @@ services:
     restart: on-failure
   ssh-agent:
     image: jenkins/ssh-agent
-  # jenkins_slave:
-  #   image: jenkins/jnlp-slave
-  #   container_name: jnlp_slave
-  #   user: root
-  #   command: -url http:/jenkins:8080 <secret> <jenkins_slave>
-  #   restart: always
-  #   volumes:
-  #     - /var/run/docker.sock:/var/run/docker.sock
-  #     - /usr/bin/docker:/usr/bin/docker
-  #     - $HOME/jnlp_slave:/var/jenkins_home
 volumes:
   jenkins_home:
