fix(casc.yaml): fix typo in approvedScriptHashes list item feat(projects.json): add new project for Dani with a NodeJS application

--- a/JDSL/projects.json
+++ b/JDSL/projects.json
@@ -13,6 +13,21 @@
           "repoOwner": "felix-orduz"
         }
       ]
+    },
+
+    {
+      "name": "Dani",
+      "description": "Projects of DANI",
+      "aplications": [
+        {
+          "name": "nodejs-dani",
+          "respository": "nodejs",
+          "description": "It's a simple NodeJS application",
+          "scm": "github",
+          "scmURL": "https://github.com/felix-orduz/nodejs.git",
+          "repoOwner": "felix-orduz"
+        }
+      ]
     }
   ]
 }
